--- a/cadence/index.html
+++ b/cadence/index.html
@@ -107,7 +107,7 @@
         <div class="dashboard-tabs">
           <button class="tab-btn active" data-tab="sets"><i class="fa-solid fa-rectangle-list"></i> Sets</button>
           <button class="tab-btn" data-tab="songs"><i class="fa-solid fa-file-waveform"></i> Songs</button>
-          <button class="tab-btn" data-tab="people"><i class="fa-solid fa-users"></i> People</button>
+          <button class="tab-btn" data-tab="people"><i class="fa-solid fa-users"></i> Team</button>
         </div>
         
         <div id="sets-tab" class="tab-content">
@@ -166,6 +166,9 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="header-actions">
+              <button id="btn-leave-team" class="btn ghost hidden" style="color: var(--error-color);"><i class="fa-solid fa-sign-out-alt"></i> Leave Team</button>
             </div>
           </div>
           <div style="margin-bottom: 1.5rem;">
