--- a/cadence/index.html
+++ b/cadence/index.html
@@ -68,6 +68,9 @@
           </button>
         </form>
         <p class="muted small-text" id="auth-message"></p>
+        <p class="muted small-text" style="margin-top: 0.5rem; text-align: center;">
+          <a href="#" id="forgot-password-link" style="color: var(--accent-color); text-decoration: underline; cursor: pointer;">Forgot password?</a>
+        </p>
         <p class="muted small-text" style="margin-top: 1rem; text-align: center;">
           <a href="#" id="toggle-signup" style="color: var(--accent-color); text-decoration: underline; cursor: pointer;">Team leader? Create a team</a>
         </p>
