--- a/cadence/index.html
+++ b/cadence/index.html
@@ -237,7 +237,7 @@
                 <button id="btn-view-as-member-detail" class="btn secondary hidden"><i class="fa-solid fa-user"></i> View as Member</button>
                 <button id="btn-edit-set-detail" class="btn secondary hidden"><i class="fa-solid fa-pencil"></i> Edit Set</button>
                 <button id="btn-delete-set-detail" class="btn ghost hidden">Delete</button>
-                <div class="header-dropdown-container hidden" id="header-add-dropdown-container">
+                <div class="header-dropdown-container hidden desktop-only" id="header-add-dropdown-container">
                   <button id="btn-header-add-toggle" class="btn secondary" type="button">
                     <i class="fa-solid fa-plus"></i> Add
                     <i class="fa-solid fa-chevron-down" style="margin-left: 0.5rem; font-size: 0.75rem;"></i>
@@ -265,6 +265,26 @@
               <button type="button" class="tab-btn" data-detail-tab="times"><i class="fa-solid fa-clock"></i> Times</button>
             </div>
             <div id="set-detail-tab-songs" class="set-detail-tab-content">
+              <div class="header-dropdown-container hidden mobile-only" id="mobile-header-add-dropdown-container" style="margin-bottom: 1rem;">
+                <button id="btn-mobile-header-add-toggle" class="btn secondary" type="button" style="width: 100%;">
+                  <i class="fa-solid fa-plus"></i> Add
+                  <i class="fa-solid fa-chevron-down" style="margin-left: 0.5rem; font-size: 0.75rem;"></i>
+                </button>
+                <div class="header-dropdown-menu hidden" id="mobile-header-add-dropdown-menu">
+                  <button type="button" class="header-dropdown-item" id="btn-mobile-header-add-song">
+                    <i class="fa-solid fa-compact-disc"></i>
+                    <span>Add Song</span>
+                  </button>
+                  <button type="button" class="header-dropdown-item" id="btn-mobile-header-add-section">
+                    <i class="fa-solid fa-microphone-lines"></i>
+                    <span>Add Section</span>
+                  </button>
+                  <button type="button" class="header-dropdown-item" id="btn-mobile-header-add-section-header">
+                    <i class="fa-solid fa-heading"></i>
+                    <span>Add Header</span>
+                  </button>
+                </div>
+              </div>
               <div id="detail-songs-list" class="song-list"></div>
             </div>
             <div id="set-detail-tab-assignments" class="set-detail-tab-content hidden">
