--- a/cadence/index.html
+++ b/cadence/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="app-header">
       <div>
-        <h1>Cadence</h1>
+        <h1><i class="fa-solid fa-ticket" style="color: var(--accent-color);"></i> Cadence</h1>
       </div>
       <div class="header-actions">
         <button id="btn-view-as-member" style="margin-right: 1rem;" class="btn secondary hidden"><i class="fa-solid fa-user"></i> Member View</button>
