--- a/cadence/index.html
+++ b/cadence/index.html
@@ -234,6 +234,7 @@
                 <p id="detail-set-description" class="set-description"></p>
               </div>
               <div class="header-actions">
+                <button id="btn-export-set-print" class="btn secondary"><i class="fa-solid fa-print"></i> Print</button>
                 <button id="btn-view-as-member-detail" class="btn secondary hidden"><i class="fa-solid fa-user"></i> View as Member</button>
                 <button id="btn-edit-set-detail" class="btn secondary hidden"><i class="fa-solid fa-pencil"></i> Edit Set</button>
                 <button id="btn-delete-set-detail" class="btn ghost hidden">Delete</button>
@@ -331,6 +332,10 @@
         </div>
       </section>
     </main>
+
+    <div id="print-set-container" class="print-set-container hidden" aria-hidden="true">
+      <div id="print-set-content" class="print-set-content"></div>
+    </div>
 
     <div id="set-modal" class="modal hidden">
       <div class="modal-content">
