--- a/cadence/index.html
+++ b/cadence/index.html
@@ -9,6 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
+
+    <link rel="icon" type="image/x-icon" href="cadence.ico">
+    <meta name="theme-color" content="#ff7b51" />
+    <meta property="og:title" content="Cadence"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Schedule sets and manage your team"/>
+    <meta property="og:site_name" content="Michael Dors" />
+    <meta property="og:url" content="https://michaeldors.com/cadence"/>
   </head>
   <body>
     <header class="app-header">
