--- a/cadence/index.html
+++ b/cadence/index.html
@@ -66,7 +66,7 @@
           <form id="auth-form" class="auth-form">
             <label>
               Email
-              <input type="email" id="login-email" placeholder="email@mcaschool.net" required />
+              <input type="email" id="login-email" placeholder="email@website.com" required />
             </label>
             <label>
               Password
@@ -88,7 +88,7 @@
           <form id="forgot-password-form" class="auth-form">
             <label>
               Email
-              <input type="email" id="forgot-password-email" placeholder="email@mcaschool.net" required />
+              <input type="email" id="forgot-password-email" placeholder="email@website.com" required />
             </label>
             <button type="submit" id="forgot-password-submit-btn" class="btn primary">
               Send Reset Link
@@ -702,7 +702,7 @@
         <form id="invite-form">
           <label>
             Email
-            <input type="email" id="invite-email" placeholder="email@mcaschool.net" required />
+            <input type="email" id="invite-email" placeholder="email@website.com" required />
           </label>
           <label id="invite-name-label" class="hidden">
             Full Name
