--- a/cadence/index.html
+++ b/cadence/index.html
@@ -146,10 +146,14 @@
         </div>
         
         <div id="sets-tab" class="tab-content">
+          <div id="pending-requests-section" class="pending-requests-section hidden">
+            <h3><i class="fa-solid fa-bell"></i> Pending Assignment Requests</h3>
+            <div id="pending-requests-list"></div>
+          </div>
           <div id="your-sets-section" class="sets-section">
             <div class="section-header">
               <div>
-                <h2><i class="fa-solid fa-user-clock"></i> Your Sets</h2>
+                <h2><i class="fa-solid fa-user-clock"></i> Your Sets <span id="pending-requests-badge" class="badge hidden"></span></h2>
                 <p class="muted">Sets where you're assigned to a song</p>
               </div>
             </div>
