--- a/cadence/index.html
+++ b/cadence/index.html
@@ -919,6 +919,9 @@
           <div id="rehearsal-times-list" style="display: flex; flex-direction: column; gap: 0.75rem; margin-bottom: 1rem;"></div>
           <p class="muted small-text" style="margin-top: -0.5rem; margin-bottom: 1rem;">Rehearsal times are optional and can be on different dates than the service.</p>
           
+          <br>
+          <p class="muted small-text">You can set up to 3 alerts per set, and alerts are sent at 8am on the scheduled date.</p>
+          <br>
           <div class="modal-actions">
             <button type="button" class="btn ghost" id="cancel-times">Cancel</button>
             <button type="submit" class="btn primary">Save</button>
